# SonicHedgehog

./: .gitignore  Dockerfile  Guide.md  README.md  docker.sh  entrypoint.sh  generator.py  install.sh
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
install/slam_toolbox_interface/lib/slam_toolbox_interface/: slam_wrapper_node
install/slam_toolbox_interface/share/slam_toolbox_interface/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/slam_toolbox_interface/share/slam_toolbox_interface/configs/: slam_toolbox.yaml
install/slam_toolbox_interface/share/slam_toolbox_interface/launch/: slam_toolbox_interface_launch.py
install/sonic_hedgehog/share/sonic_hedgehog/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sonic_hedgehog/share/sonic_hedgehog/configs/: behavior_server.yaml  bt_navigator.yaml  controller_server.yaml  diff_drive_controller.yaml  nav2_config.yaml  planner_server.yaml  ros2_control.yaml  rviz_config.rviz  slam_toolbox.yaml
install/sonic_hedgehog/share/sonic_hedgehog/launch/: teleop_test.launch.py
install/sonic_hedgehog/share/sonic_hedgehog/maps/: map_serial.data  map_serial.posegraph
install/sonic_hedgehog/share/sonic_hedgehog/rviz/: rviz_config.rviz
install/task1/lib/task1/: task1
install/task1/share/task1/: package.sh
install/visualization/lib/visualization/: visualization_node
install/visualization/share/visualization/: package.sh  package.xml  rviz_config.rviz
install/webots_adapter/lib/webots_adapter/: webots_adapter_node
install/webots_adapter/share/webots_adapter/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/webots_adapter/share/webots_adapter/launch/: webots_adapter_launch.py
log/: latest_build
scripts/: nav_to_pose.sh  real_cmd.sh  real_cmd_ld19.sh  real_no_cmd.sh  real_no_cmd_ld19.sh  sonic.sh  sym_no_cmd.sh  teleop.sh
src/cmd_vel_node/: package.xml  setup.cfg  setup.py
src/cmd_vel_node/cmd_vel_node/: cmd_vel_node.py
src/cobraflex_driver/: package.xml  setup.cfg  setup.py
src/cobraflex_driver/cobraflex_driver/: cobraflex_driver.py
src/ldrobot-lidar-ros2/ldlidar_node/params/: slam_toolbox.yaml
src/ldrobot-lidar-ros2/ldlidar_node/urdf/: ldlidar_descr.urdf.xml
src/lidar_node/: package.xml  setup.cfg  setup.py
src/lidar_node/lidar_node/: lidar_filter.py  lidar_node.py  lidar_parser.py
src/odom_node/: package.xml  setup.cfg  setup.py
src/odom_node/odom_node/: odom_node.py
src/slam_toolbox_interface/: package.xml  setup.cfg  setup.py
src/slam_toolbox_interface/configs/: slam_toolbox.yaml
src/slam_toolbox_interface/launch/: slam_toolbox_interface_launch.py
src/slam_toolbox_interface/slam_toolbox_interface/: slam_wrapper_node.py
src/sonic_hedgehog/: package.xml  setup.cfg  setup.py
src/sonic_hedgehog/configs/: behavior_server.yaml  bt_navigator.yaml  cmd_vel.yaml  cobraflex_driver.yaml  controller_server.yaml  ekf_odom.yaml  ld_lidar.yaml  ldlidar.yaml  lidar.yaml  odom.yaml  planner_server.yaml  slam_toolbox.yaml  teleop_twist_keyboard.yaml
src/sonic_hedgehog/launch/: nav_slam_to_point.launch.py  real_cmd.launch.py  real_cmd_ld19.launch.py  real_no_cmd.launch.py  real_no_cmd_ld19.launch.py  sim_no_cmd.launch.py  sonic_cmd.launch.py  teleop_test.launch.py
src/sonic_hedgehog/maps/: clear_map.data  map1.data  map1.posegraph  map_serial.data  map_serial.posegraph
src/sonic_hedgehog/rviz/: rviz_config.rviz
src/task1/: package.xml  setup.cfg  setup.py
src/task1/task1/: task1.py
src/visualization/: package.xml  rviz_config.rviz  setup.py
src/visualization/visualization/: visualization_node.py
src/webots_adapter/: package.xml  setup.cfg  setup.py
src/webots_adapter/launch/: webots_adapter_launch.py
src/webots_adapter/webots_adapter/: adapter_node.py  sim_cmdvel_node.py  sim_telemetry_node.py
test/: camera.py  cmd.py  second.py  test.py
test/lidar/: lidar_filter.py  lidar_parser.py  lidar_stabilizer.py  lidar_visualizer.py  main.py
utils/: bag.sh  config.rviz  map_odom_laser.rviz  map_save.sh  map_save_png.sh  to_docker.sh
