<?xml version="1.0"?>
<package format="3">
  <name>slam_toolbox_interface</name>
  <version>0.1.0</version>
  <description>Interface node for 2D SLAM Toolbox (ROS2)</description>
  <maintainer email="gengesav@gmail.com">GENBBB</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>slam_toolbox</depend>

  <exec_depend>launch</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
