<?xml version="1.0"?>
<package format="3">
  <name>task1</name>
  <version>0.1.0</version>
  <description>Task1 mission.</description>
  <maintainer email="gengesav@gmail.com">GENBBB</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>action_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>