<?xml version="1.0"?>
<package format="3">
  <name>visualization</name>
  <version>0.1.0</version>
  <description>Visualization of robot pose, map, and LIDAR boundaries for SonicHedgehog.</description>
  <maintainer email="gengesav@gmail.com">GENBBB</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
